--- a/1d_potentials_sim.ipynb
+++ b/1d_potentials_sim.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -29,11 +15,14 @@
         "\n",
         "\n",
         "def rand(eps):\n",
+        "    \"\"\"\n",
+        "    Generates a random float in the range (-eps,eps)\n",
+        "    \"\"\"\n",
         "    return eps*(2*random.random()-1)\n",
         "\n",
         "def smart_grad_desc(x,f,df,iters=50,eta=1, eps=0.0000):\n",
         "    \"\"\"\n",
-        "    Basically a standard gradient descent, but repeatedley halves the learning rate\n",
+        "    Basically a standard gradient descent, but repeatedly halves the learning rate\n",
         "    until new value is less than old one.\n",
         "    \"\"\"\n",
         "    x_new=x\n",
@@ -113,17 +102,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vu7w1Yvn7uzI"
+      },
+      "outputs": [],
       "source": [
         "expo=4\n",
         "varphi=lambda x: 1/(1+x**expo)\n",
         "dvarphi=lambda x:-(expo*(x**(expo-1)))/((1+x**expo)**2)\n",
         "optimize_potential(varphi, dvarphi, 20,200,2000)"
-      ],
-      "metadata": {
-        "id": "vu7w1Yvn7uzI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
