--- a/1d_potentials_sim.ipynb
+++ b/1d_potentials_sim.ipynb
@@ -94,6 +94,14 @@
         "        plot(xs,ys)\n",
         "        print(f' On {_},  value of potential is {value}')\n",
         "\n",
+        "def optimize_potential_2d(p,dp,radius,num_points,iters,init_points=None):\n",
+        "  \"\"\"\n",
+        "  finding the optimal configuration of points to minimize the average potential energy per particle. p and dp are the potential and\n",
+        "  its derivative respectively, iters is the number of iterations the gradient descent algo runs for, and init_points allos the option of\n",
+        "  specifying the initial location of the points. if None, randomly initialized. Ideally p should be an even function.\n",
+        "  \"\"\"\n",
+        "  pass\n",
+        "\n",
         "\n",
         "\n",
         "\n",
